--- a/assets/main.css
+++ b/assets/main.css
@@ -29,3 +29,48 @@
     box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.3);
     color: var(--white);
 }
+
+.mma-feature {
+    min-height: 100dvh;
+    padding: 2.5rem 0;
+}
+.mma-feature-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1.25rem;
+}
+.mma-feature-card {
+    padding: 1.75rem 1.25rem;
+    border-radius: 0.5rem;
+    background-color: var(--white);
+    box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.1);
+}
+.mma-feature-card__title {
+    margin-bottom: 0.5rem;
+}
+.mma-feature-card__title > h3 {
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 100%;
+}
+.mma-feature-card__title span {
+    color: var(--orange);
+}
+.mma-feature-card__description {
+    margin-bottom: 2rem;
+}
+.mma-feature-card__description > p {
+    font-size: 0.875rem;
+    line-height: 130%;
+}
+.mma-feature-card__button {
+    font-size: 0.875rem;
+    color: var(--white);
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.5rem;
+    background-color: var(--turquoise);
+    transition: background-color 0.2s ease-in-out;
+}
+.mma-feature-card__button:active {
+    background-color: var(--turquoise-active);
+}
